Update VOCUS 2022-06-07 patch

--- a/_posts/2022-06-06-VOCUS-jazz-與-即興(之-式)-即時(之-式)-精神(之-式)-活激(之-式)-等的橋接.html
+++ b/_posts/2022-06-06-VOCUS-jazz-與-即興(之-式)-即時(之-式)-精神(之-式)-活激(之-式)-等的橋接.html
@@ -15,12 +15,10 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">jazz = 舌液激 = 舌氵激 = 活激</span>，其中 j 約略形聲台閩語「舌」的 jí 式發音之起音。若考慮字尾實際上有二個 z，所以也可能直接作爲形容詞「<span style="font-weight: bold; ">活激之</span>」的漢字語意，或是另有「<span style="font-weight: bold; ">活激式</span>」之意。我們可以看到此處 jazz 橋接的漢字「活激」二字可能融合了上述 jasm 和 gism 二個早期的俗語所帶有的「活性」和「激盪」二種意思。</div>
 <div class="draft-block draft--p left">現代中文漢字或將 jazz 音譯「爵士」，或約略音義混搭而漢譯「即興」等，所以我們常會看到有兩種關於 jazz music 的漢譯「爵士樂」或「即興樂」(類似「即時音樂」)。不過，從前述的字源橋接分析來看，jazz music 還可能具有「精神樂」和「活激樂」的內涵。並且，jazz music 之所以常常把中音度的saxphone [Sax號、Sax歕管、(Sax)豎管式叭喇、(Sax)簫管式叭喇] 當作它的經典樂器之象徵，也可能是因爲中音度的 saxphone 這種吹奏樂器的整體外型輪廓，有點接近一個拉長且稍微拉直了的字母 Z。</div>
 <div class="draft-block draft--p left">此外，若考慮 Z 這個符號有時會出現在漫畫中作爲「睡覺」或「睡眠」(意通台閩語「睏」或「睏眠」) 甚至是「打瞌睡」或「盹瞌」(台閩語發音似  dùgu) 狀態的表示 (如 zzz….. 或 z.z.z….. 等)，搞不好 jazz 一字隱約中也帶有「<span style="font-weight: bold; ">解睏</span>」即類似「醒覺」的寓意呢！</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-1gib6"><span style="font-weight: bold; ">P.S.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">jazz music：即興樂；即時樂；精神樂；活激樂；即興之樂；即時之樂；精神之樂；活激之樂；即興式樂；即時式樂；精神式樂；活激式樂；即興音樂；即時音樂；精神音樂；活激音樂；即興樂曲；即時樂曲；精神樂曲；活激樂曲；即興鳴聲之技；即時鳴聲之技；精神鳴聲之技；活激鳴聲之技；即興鳴樂聲音曲； 即時鳴樂聲音曲；精神鳴樂聲音曲； 活激鳴樂聲音曲；即興直子諒；即時直子諒；精神直子諒；活激直子諒。(P.S. 其中「直子諒」是意通 music 的一個漢字古語，詳見「後記.1」)</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">saxphone：Sax號、Sax歕管、(Sax)豎管式叭喇、(Sax)簫管式叭喇</span>，漢文多音譯「薩克斯風」等，意指 Antoine Joseph Adolphe Sax (公元 1814 年 ~ 1894年) 發明的一種介於「叭喇」(意通「喇叭」、「號」) 和「豎笛」(豎管、簫)之間的吹管樂器，並且中音度之 saxphone 的出聲端造型還帶有一個菸斗狀或上鉤狀的特徵。其中 Sax (錫氏、錫刀工氏，漢文多音譯「薩克斯」) 是一個姓氏名稱，可能承襲自 Saxons (錫氏族；錫刀工人氏；錫刀工人眾；商族，此時 Saxons = Saksons = six合口繫偶n眾 = 六合口繫nn群 = 亠㇀丶合口繫人冂族 = 亠丷合口繫儿冂族 = 商族；商氏。漢文多譯「薩克遜族」、「薩克森族」等)。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Dr. Jazzz Lantern：達人解字籠燈</span>。Dr. Jazzz Lantern (達人<span style="text-decoration: underline; ">解字籠燈</span>) 是筆者在多年以前幻想出來的一位虛擬身份的語言文字專家，在語文世界的探索中對筆者有很大的幫助和啟發，不過 Dr. Jazzz Lantern 其實平常話不太多說，倒是偶爾會講幾個奇怪的冷笑話。關於其笑話的記錄，偶爾會穿插在筆者寫作的文章裡。Dr. Jazzz Lantern 這個名號裡的 Jazzz 與前述的 jazz 一字關係不大。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-7a1ea"><span style="font-weight: bold; ">後記.1：易直子諒 / music 與「禮樂」的關聯<br></span></h2>
 <div class="draft-block draft--p left">漢字「易直子諒」一語出自<span style="font-weight: bold; ">《禮記.樂記》「致樂以治心，則易直子諒之心油然生矣。</span>」，<span style="text-decoration: underline; font-weight: bold; ">孔穎達</span><span style="font-weight: bold; ">曾經疏解為「子謂子愛，諒謂誠信，言能深遠詳審此樂以治其心，則和易正直子愛誠信之心，油油然從內而生矣。」</span>的意思，將「易」解為「和易」，「直」解為「正直」，「子」解為「子愛」，「諒」解為「誠信」。</div>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; font-weight: bold; ">章炳麟</span> <span style="font-weight: bold; ">《印度人之論國粹》又寫到「印度人於大地最為愷悌子諒，至今食不過炙卵，而肉羹則絶焉。」</span>，此處「愷悌子諒」可能是約略形聲 quarterical (寬大樣容之況；寬大的。類似「慈悲的」之意) 的語音漢字，其中的「子諒」未必和前述「易直子諒」的「子諒」有關。即 <span style="font-weight: bold; ">quarterical = quar.te.r.ical = 愷.悌.兒.言京 = 愷.悌.子.諒 = 愷悌子諒 = 寬大子諒 = 寬大的</span>。</div>
@@ -32,19 +30,15 @@ author: 羅聖爾
 <div class="draft-block draft--p left">漢字「樂」在「音樂」和「快樂」二詞用的是同一個字，所以很可能忽略了音樂也有舒發內心恐懼憂傷悲情的面向，沒有 music 一字的概念來的廣闊，因爲 music 的 us 這部份可能還含概了「憂傷」之意，sic 還含概了「心恐」、「心懼」、「心驚」甚至「心病」，usic 含概了「鬱結」，music 整個單字又可能含概了漢語「寞寂」、「低落」與「紓解」的融合。</div>
 <div class="draft-block draft--p left">並且，古漢字文化又將「禮樂」二個概念結合在一起，結果就是造就了「官樂」而非「民樂」。但是，「官樂」通常缺乏自由市場的活性，又因爲很難自然地普及、只能通過訓教來推廣，所以漢字文化的古代樂曲在後世基本上是失傳的多。</div>
 <div class="draft-block draft--p left">不過，如果<span style="font-weight: bold; ">《禮記.樂記》提到的「易直子諒之心」</span>就是「易目十子言京之心」即「易music之心」的概念 (或類似「隨興音樂的精神」之概念)，那麼也就是當時古漢字文化在音樂創作概念上的一大突破，只是後人大多還是看不出這個字詞更直接的設計涵意。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-dv9v"><span style="font-weight: bold; ">後記.2. 樂和曲是同一種風格嗎？<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">古人有言「獨樂樂不若與眾樂樂」</span>，顯見「樂 (ㄩㄝˋ)」和「樂 (ㄌㄜˋ)」的關係較密切，也許「曲」纔是含概「悲哀」的一種「直子諒」(music) 也說不定，所以纔會有「委曲」這樣的造詞。不過，個人只是從文字本身的關聯來思考，究竟先秦時期的「樂」有沒有悲哀的風格類型還是要考古纔知道。</div>
 <div class="draft-block draft--p left">然而，漢字古籍<span style="font-weight: bold; ">《曲禮》一開始就有提到「......。敖不可長，欲不可從，志不可滿，樂不可極。......」</span>，好像「曲」和「樂」二種風格真的有點不太一樣，「曲」好像是因應「樂極生悲」的情境纔產生的。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-2ssd9"><span style="font-weight: bold; ">後記.3. 試譯《曲禮》的第一段文字<br></span></h2>
 <div class="draft-block draft--p left">此處用音樂或樂曲的角度去翻譯漢字古籍《曲禮》的第一段文字「<span style="font-weight: bold; ">毋不敬儼若思安定辭安民哉</span> 」：</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">試譯：</span>《曲禮》記載「毋不敬 (music = 毋小一敬 = 毋不敬) 儼若 (just like) 思 (thinking) 安定 (and) 辭 (representing) 安 (out of) 民 (mind)哉 (to go = 十口戈 = 哉)」，所以其實「<span style="font-weight: bold; ">毋不敬儼若思安定辭安民哉</span>」這句話可能就是類似 "<span style="font-weight: bold; ">Music just like the thinking and representing which is out of mind to go</span>" 的意思，意即「<span style="font-weight: bold; ">音樂是一種情溢乎辭的思想和表達</span>」。</div>
 <div class="draft-block draft--p left">然而，《曲禮》好像只有第一句「毋不敬儼若思安定辭安民哉」(Music just like thinking and representing out of mind to go) 和音樂相關，後面的除了「樂不可極」(happiness can‘t be gotten extremely 或 music can‘t be taken to the limits) 一詞和音樂還有點關係，其它內容似乎都被改造成某種道德觀及禮節觀了，看起來很難還原其講述樂曲的本來意義。</div>
 <div class="draft-block draft--p left">雖然現在已經難以解讀古籍《曲禮》整篇文章的原貌，但是《曲禮》第一句「毋不敬儼若思安定辭安民哉」(Music just like thinking and representing out of mind to go) 最耐人尋味的就是將漢字「民」和拼音文字 mind (心；心念；心情) 的音韻重疊在一起，傳達出一種有別於「官樂」的「民曲」之概念，應是當時關於「直子諒 -- 目十子言京」(music) 的創作風格之重大而突破性的觀點。</div>
 <div class="draft-block draft--p left">並且，前面 music 又和「毋不敬」重疊在一起，隱含了「沒有一種樂曲不該被尊重」的寬廣態度，可能是因爲《曲禮》的作者深切地認為「樂曲就是應該反映各種民意或民情的心聲」，畢竟《曲禮》是早先周公制禮作樂兼解夢安民之概念的延續，所以仍然是從「以禮治天下」的政治動機為出發點來看待音樂文化方面的事情。</div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/8cN7LWGO-gE"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/8cN7LWGO-gE"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/8cN7LWGO-gE" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/8cN7LWGO-gE</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Positive JAZZ - Morning Music To Start The Day / 分享自 YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
