--- a/_posts/2022-06-06-VOCUS-美國的全球戰略正在弱化歐陸強權嗎.html
+++ b/_posts/2022-06-06-VOCUS-美國的全球戰略正在弱化歐陸強權嗎.html
@@ -8,4 +8,15 @@ tags: blog
 author: 王臻明
 ---
 
-<p><br></p>
+<p>是說自從美國重拾大國競爭的戰略，將俄羅斯與中國視為對手以來，整個世界格局已出現非常顯著的改變。俄羅斯揮軍入侵烏克蘭，不只加速了這樣的變局，戰事出乎意料的膠著，使歐美國家有時間達成共識，展開制裁，更讓歐陸的情勢出現大幅度的變化。德國與法國成為眾矢之的，不少輿論批評這兩國自私軟弱，未能積極援助烏克蘭並嚴懲俄羅斯。而德、法兩國之所以會出現這樣的情況，除了之前談過的，歐盟與北約的競爭因素外，還有一個近期頗為流行的陰謀論，認為美國的全球戰略，正在故意弱化傳統的歐陸強權。</p>
+<h3><a href="https://vocus.cc/article/6262137afd89780001b5933d">北約、歐盟的競爭與戰略重心的轉移 | 王臻明 - vocus</a></h3><span>是說許多人常會搞混北約與歐盟，分不清楚這兩者有何差異，為什麼俄羅斯強力阻止烏克蘭加入北約，卻不在乎烏克蘭加入歐盟。甚至有些人誤認為這兩者是互相隸屬的關係，北約是歐盟的軍事組織，但這完全是錯誤的觀念。兩者不僅非常不同，甚至還有些競爭關係。俄羅斯入侵烏克蘭後，不止激化了北約與歐盟的矛盾....... 地緣戰略, 北約, 華約, 俄羅斯, 烏克蘭, 法國, 德國, 美國, 北約, 烏克蘭, 競爭, 歐盟, 俄羅斯</span><img src="https://images.vocus.cc/0a137016-95db-49a1-8f1e-f8c6d2cf362a.png">
+<p>雖然這樣的陰謀論並不是什麼新鮮事，過去許多人認為英、美兩國的長期國家政策，就是阻止歐陸上出現新的強權，或是進一步延伸來說，美國這個海權國家最重要的戰略，是封鎖整個世界島。但近期的情勢增添了兩項新證據。其一是對俄羅斯能源出口的制裁行動，批評者認為一旦德、法兩國全面中止向俄羅斯採購能源，將嚴重影響兩國的發展，只能被迫以更高昂的價格，從別的來源採購，無形中削弱了德、法兩國的競爭力。其二是美國對中國的圍堵，迫使各國企業與中國脫勾，讓德、法兩國喪失龐大的中國市場。</p>
+<h3><a href="https://vocus.cc/sophist4ever/5f4b4c81fd89780001b2ea4a?from=recommend&articleId=35386">封鎖世界島 | 王臻明 - vocus</a></h3><span>是說長期以來，一直有一個很有趣的說法，認為美國維持世界霸主地位的最高指導戰略，就是封鎖世界島。世界島這個概念是把整個歐亞大陸視為地球上的最大島嶼，主宰文明世界，在過去以陸權為主的時代，世界島就是整個人類歷史的主舞台。等到人類的航海技術越來越進步，海權興起，能控制海洋的國家，才慢慢取而代之...... 地緣戰略, 美中關係, 美國, 中國, 華為, 蘇聯, 世界島, 貿易戰, 世界, 蘇聯, 中國, 美國, 伊斯蘭國, 國家, 資源, 中國共產黨, 封鎖, 戰略</span><img src="https://images.vocus.cc/719d59f7-d67d-4be5-bcd0-2292b887e442.jpg">
+<p>這樣的想法其實在德、法兩國國內有一定的市場，畢竟便宜的俄羅斯能源與龐大的中國市場，對這兩國近年來的發展頗有貢獻。但反過來說，德、法兩國與俄羅斯、中國的往來，在某種程度上也間接助長了獨裁者的野心。在俄烏戰爭爆發以後，已卸任的德國總理梅克爾受到國際社會嚴厲的批評，認為在她多年執政的時間內，積極發展與俄羅斯、中國的關係，成為俄羅斯總統普丁與中國國家主席習近平的好朋友，導致德國的政策常受俄羅斯與中國的影響，讓這兩個專制國家可以透過德國，來利用、拉攏、並滲透歐盟。</p>
+<img src="https://images.vocus.cc/2cfbfe87-54aa-4fb5-b61b-f6f601117d90.jpg" alt="中國國家主席習近平與法國總統馬克宏、新任的德國總理蕭茲近期進行的視訊高鋒會。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">中國國家主席習近平與法國總統馬克宏、新任的德國總理蕭茲近期進行的視訊高鋒會。</figcaption>
+<p>美國在反恐戰爭結束後，開始正視俄羅斯與中國的威脅，推出一連串反制這兩個專制國家野心擴張的政策，結果間接打擊到德、法兩國。所以嚴格來說，這個陰謀論有其真實的一面，但德、法兩國不顧這兩個專制國家的惡行，選擇繼續與其往來，就必需承擔這樣的風險。俄羅斯併吞克里米亞半島，並不是近期才發生的事，過去八年間烏東戰爭一直持續者，而中國長期迫害人權，大規模關押維吾爾族人的事，也不是昨天才被外界知曉。德、法兩國為了利益，故意視而不見，現在受到影響才來跳腳，未免太過虛偽。</p>
+<p>再退一步來說，並沒有人逼使普丁入侵烏克蘭，要俄羅斯挑起這場戰爭，這完全是領土擴張的野心，藉口克里米亞半島的歷史問題，與烏克蘭東部地區的種族糾紛，想要併吞整個烏克蘭。如果普丁沒有做出錯誤的選擇，這些經濟制裁就不會出現。同樣的情況也出現在中國，沒有人逼習近平進行對外的擴張，發動戰狼外交，但中國卻選擇了這條路，就不能迴避這種行為所產生的後果。那些歐洲民主國家不能同時想要助紂為虐，卻又希望完全不必付出代價。</p>
+<p>放眼未來，美、中兩國的競爭恐怕會越演越烈，在軍事、外交、經濟、科技上全面針鋒相對。美國所推出的印太經貿架構（IPEF），目前看來並不像是一個自由貿易協定，更像是要重組供應鏈，簡單來說，就是將世界工廠搬到印太地區的其他國家。雖然這只是印太地區的重組，卻無疑將影響整個世界。德、法兩國未來必需要做出選擇，是將營運重心繼續留在中國，或是隨著這個印太經貿架構而轉向。這可能才是真正影響德、法兩國接下來發展的關鍵，甚至是決定整個歐盟在全球貿易市場中將扮演何種角色的十字路口。</p>
+<p>就目前的情況來看，德、法兩國的社會輿論，雖然已經有聲音在檢討過份依賴俄羅斯能源與中國市場，對國家安全是否造成了威脅？但多數都集中在能源價格與經濟衰退的現實問題上，未能以更宏觀的角度來看待這個問題。這也導致歐洲內部在討論制裁俄羅斯的問題時，安全受到極大威脅的東歐國家會不假辭色地嚴厲批評德、法兩國。愛沙尼亞國會的外交事務委員會主席還諷刺說，希望德、法兩國不是因為害怕烏克蘭贏得這場戰爭，讓德、法兩國失去對歐洲的影響力。可謂一語中的，直接點出德、法兩國正面臨的危機。</p>
+<p>東歐國家近來的友台動作，暗示了這些國家將會快速融入印太經架構中，在美國重組世界供應鏈時，搶佔關鍵的位置，這將撼動過去歐盟的印太政策。因此不論是在軍事或經貿上，接下來二、三十年將會有全面性的變化。這雖然與美國的全球戰略脫不了關係，但更明確來說，是美國與其盟邦，回應俄羅斯與中國擴張野心的結果。這並不是什麼陰謀論，因為方向已明明白白地擺在檯面上進行中，問題只在於沉迷過去美好時光中的人們，不願意正視未來早就改變的事實，這一點台灣社會甚至更為嚴重。</p>
