--- a/_posts/2022-06-06-INMEDIA-古思堯煽動案-棺材寫-打倒共產黨-曾透露趁冬奧開幕到中聯辦抗議.html
+++ b/_posts/2022-06-06-INMEDIA-古思堯煽動案-棺材寫-打倒共產黨-曾透露趁冬奧開幕到中聯辦抗議.html
@@ -8,17 +8,17 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/ccc_9.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>75歲患末期直腸癌的古思堯，涉計劃於北京冬奧開幕日到中聯辦抗議，惟未出發已被國安處拘捕。他被控「企圖作出或準備作出一項或多項具煽動意圖的行為」罪，案件今（6日）於西九龍法院開審。同意案情指，案發當日古思堯住所外放置長約一米的棺材，寫有「打倒共產黨」、「結束一黨專政」、「民主人權高於冬奧，香港國安法，食屎都發達」等字眼。控方又讀出前社民連秘書長符偉樂的供詞，他指古思堯曾透露想趁中國冬奧開幕禮向中國抗議，並指曾要求社民連成員為他發新聞稿遭拒，符終為古製作「升棺發材賀冬奧」採訪通知並發放給各大傳媒。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/ccc_9.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>75歲患末期直腸癌的古思堯，涉計劃於北京冬奧開幕日到中聯辦抗議，惟未出發已被國安處拘捕。他否認「企圖作出或準備作出一項或多項具煽動意圖的行為」罪，案件今（6日）於西九龍法院開審。同意案情指，案發當日古思堯住所外放置長約一米的棺材，寫有「打倒共產黨」、「結束一黨專政」、「民主人權高於冬奧，香港國安法，食屎都發達」等字眼。控方又讀出前社民連秘書長符偉樂的供詞，他指古思堯曾透露想趁中國冬奧開幕禮向中國抗議，並指曾要求社民連成員為他發新聞稿遭拒，符終為古製作「升棺發材賀冬奧」採訪通知並發放給各大傳媒。</p>
 <p><strong>古思堯住所外棺材寫「民主人權高於冬奧」、「打倒共產黨」</strong></p>
 <p>控方代表為署理副刑事檢控專員（特別職務）周天行及署理高級檢控官徐倩姿，辯方代表為大律師吳宗鑾。</p>
-<p>同意案情指，今年2月4日清晨約6時，警方國安處到達古思堯位於長沙灣永盛工業大廈的住所，發現門外放置了一副用木板製成、漆上金漆、110厘米長x37厘米闊x44厘米高的棺木，上方以黑色墨水寫上「打倒共產黨」及「結束一黨專政」，兩側以黑色墨水寫上「民主人權高於冬奧，香港國安法，食屎都發達」。棺材上有一支連着塑膠旗杆、55厘米長x62厘米闊的白色布製旗幟，以黑色及藍色墨水寫上「屠夫政權遺臭萬年」。</p>
-<p>警方後於住所檢獲一張標題為「升棺發材賀冬奧採訪通知」的A4紙、三支油性筆、兩支黑色墨水及一支藍色墨水，並在大門10米外的後樓梯檢獲一罐金色油漆。</p>
-<p>庭上讀出拘捕古思堯的偵緝警員12665張健成（音）供詞，他副學士畢業，2010年11月8日加入警隊，駐守國安處。他稱當日凌晨5時於警察總部得知拘捕古思堯的行動，於近6時隨隊到達古思堯住所，其時單位木門虛掩沒鎖上，警員表露身分並推門進入，看見古思堯坐在單位中央位置，遂出示委任證並以「煽動顛覆國家政權」拘捕他，古在警誡下表示「冇嘢講」。張續指，古思堯被押解往後樓梯搜查期間，曾主動指出一罐油漆，並指該油漆用作塗棺材表面，但古在警誡後再表示「冇嘢講」。</p>
+<p>同意案情指，今年2月4日清晨約6時，警方國安處到達古思堯位於長沙灣永盛工業大廈的住所，發現門外放置了一副用木板製成、塗上金漆、110厘米長x37厘米闊x44厘米高的棺木，上方寫上「打倒共產黨」及「結束一黨專政」，兩側寫上「民主人權高於冬奧，香港國安法，食屎都發達」。棺材上另有一支連着塑膠旗杆、55厘米長x62厘米闊的白色布製旗幟，寫有「屠夫政權遺臭萬年」。</p>
+<p>警方後於住所檢獲兩部電話、一張「升棺發材賀冬奧」的採訪通知、三支油性筆及黑色和藍色墨水，並在大門10米外的後樓梯檢獲一罐金色油漆。</p>
+<p>庭上讀出拘捕古思堯的偵緝警員12665張健成（音）供詞，他副學士畢業，2010年11月8日加入警隊，駐守國安處。他稱當日凌晨5時於警察總部得知拘捕古思堯的行動，近6時隨隊到達古思堯住所，其時單位木門虛掩沒鎖上，他表露身分並推門進入，看見古思堯坐在單位中央位置，遂出示委任證並以「煽動顛覆國家政權」拘捕他，古在警誡下表示「冇嘢講」。張續指，古思堯曾主動指出後樓梯一罐油漆，指該油漆用作塗棺材表面，但古在警誡後再表示「冇嘢講」。</p>
 <p><strong>符偉樂稱為古思堯製作採訪通知 古曾稱於冬奧開幕向中國抗議</strong></p>
 <p>此外，「女長毛」雷玉蓮及前社民連秘書長符偉樂亦被帶走調查，前者手提電話內的6張照片，及後者電腦內為古思堯製作的採訪通知亦列為呈堂證物。</p>
 <p>庭上讀出符偉樂的書面供詞，他表示自己八十年代開始參與政治運動，曾先後加入民協、民主黨、前綫、社民連及人民力量，直至2012年退出人民力量並「專心湊仔」。他1991年至1999年擔任深水埗區議員期間認識古思堯，喚他「阿古」，至案發時均有聯絡。</p>
-<p>符供稱，今年1月26日晚到古思堯住所探望他，相約他翌日早上到長沙灣廣場富臨飲茶，其時未見他家中有棺材或相關材料。翌日飲茶期間，古思堯提及想於2月4日初四早上，由西環警署附近抬一副棺材到中聯辦示威，目的是「在中國冬奧運開幕禮向中國抗議」。古指曾找社民連的唐婉清幫忙整理新聞稿但被拒絕，遂找符偉樂幫忙。符「思考後覺得都係一個示威」，故答應幫忙，由古告知他內容，他再作整理和發送。</p>
-<p>符其後返家製作新聞稿，於1月30日晚列印並帶到古思堯家，古表示滿意，希望他明天發放。符指當晚在古家看到一副紙棺材，但未看到任何文字，古也沒提及用途。2月2日早上，符登入電郵「<a href="mailto:koo61500331@gmail.com">koo61500331@gmail.com</a>」，並將新聞稿發放至東方日報、明報、無綫電視、香港電台等多間媒體。據悉採訪通知提及2月4日早上10時古思堯將到中聯辦示威。</p>
+<p>符供稱，今年1月26日晚到古思堯住所探望他，相約他翌日早上到長沙灣廣場富臨飲茶，其時未見他家中有棺材。翌日飲茶期間，古思堯提及想於2月4日初四早上，由西環警署附近抬一副棺材到中聯辦示威，目的是「在中國冬奧運開幕禮向中國抗議」。古指曾找社民連的唐婉清幫忙整理新聞稿但被拒絕，遂找符偉樂幫忙。符「思考後覺得都係一個示威」，故答應由古告知他內容，他再作整理和發送。</p>
+<p>符其後製作新聞稿，於1月30日晚列印並帶到古思堯家，古表示滿意，希望他明天發放。符指當晚在古家看到一副紙棺材，但未看到任何文字，古也沒提及用途。2月2日早上，符登入電郵「<a href="mailto:koo61500331@gmail.com">koo61500331@gmail.com</a>」，並將新聞稿發放至東方日報、明報、無綫電視、香港電台等多間媒體。據悉採訪通知提及2月4日早上10時古思堯將到中聯辦示威。</p>
 <p>被問及「打倒共產黨」及「結束一黨專政」的意思，符認為是「結束共產黨在中國管治，中國應該多黨管治」。他又認為「香港國安法，食屎都發達」乃批評《國安法》，「屠夫政權，遺臭萬年」是批評共產黨。符又指，由於他自2012年起沒有再參與社運，古沒有邀請他參加示威，他對相關詳情一概不知道。</p>
 <p><strong>辯方主要爭議法律觀點 申7月初結案陳詞</strong></p>
 <p>案件押後至明天續審，惟視乎控辯雙方處理另一宗案件的進度，或押後至後天續審，預計將會播放古思堯兩段長約2小時的錄影會面。辯方對錄影會面中招認的自願性和呈堂性沒有爭議，暫時也不會傳召辯方證人，並主要就法律觀點有爭議，申請7月初作結案陳詞。</p>
