Update VOCUS 2022-06-08 patch

--- a/_posts/2022-06-07-VOCUS-超時空亞當計畫-復古的英雄故事.html
+++ b/_posts/2022-06-07-VOCUS-超時空亞當計畫-復古的英雄故事.html
@@ -42,4 +42,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/15250ab0-ba16-4ceb-8da4-ead50d16b4a8.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">但是如果你是常看電影的人，或是對於科幻電影要求很高的觀眾，光是一開始的劇情就可能可以預測後面的故事，甚至開始覺得無聊。畢竟《超時空亞當計畫》對於科幻真的就只是英雄片等級，讓人不免想到90年代歐美量產科幻片時候的各種千篇一律的電影開端與結局。</div>
 <div class="draft-block draft--p left">雖然《超時空亞當計畫》在Netflix的觀看量可以說是相當不錯，還進入過幾次各國的前十名，但給予好評的觀眾其實不多，多半給了個馬馬虎虎的評分。在現今許多題材都已經反覆出現，市場競爭激烈的年代。《超時空亞當計畫》打出有些復古風情的安全牌卻還是落得沒記憶點的下場，可以說要讓新一代觀眾買單果然還是需要努力下功夫再來騙。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/nRA7RBt07RY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/nRA7RBt07RY"></iframe></div>
