Update VOCUS 2022-06-09 patch

--- a/_posts/2022-06-08-VOCUS-經濟慘淡-中共為何不發錢救民眾.html
+++ b/_posts/2022-06-08-VOCUS-經濟慘淡-中共為何不發錢救民眾.html
@@ -9,8 +9,7 @@ author: 透視中國
 ---
 
 <div class="draft-block draft--p left">文/方涵</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/ReurTVJ_9n4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/ReurTVJ_9n4"></iframe></div>
 <div class="draft-block draft--p left">當下的中國經濟，在中共執拗的清零防疫政策下，被打得慘不忍睹，很多低收入民眾已經到了難以為生的境地。很多專家學者疾呼中共給老百姓發錢救急。但中共依然是採取猛壓各地政府上項目、要各大銀行放貸款，就是不直接給老百姓發錢，這到底為甚麼呢？</div>
 <div class="draft-block draft--p left">李克強在5月底向中國省、市、縣級約10萬官員承認，中國經濟形式惡劣，已嚴重衝擊財政收入，4月份中央財政收入下降5.9%，地方財政收入下降6.6%。同期公佈重要經濟指標——社會融資規模在4月比去年下降了50%，比3月份下降了80%，數據顯示中國整個經濟正陷入停滯。為救助在疫情中受到衝擊的民眾，美國、加拿大、德國、英國、澳大利亞、日本、台灣、香港紛紛向全民發錢救濟。而實施社會主義制度的中國，除了一些地方政府和部門對有限的民眾發了一些消費券補助外，中央政府對全民救助三緘其口，這到底為甚麼？</div>
 <div class="draft-block draft--p left">首先是在中共的觀念中，把錢直接發給老百姓，政府甚麼都沒得到，是一種浪費。花錢搞新基建、老基建，雖然荒在那裏、很少人用也是浪費，但不管怎樣留下了一堆鋼筋水泥，在銀行的賬面上還有個實物資產做帳。習近平不是剛講過社會主義中國「不養懶人」嗎。搞基建工程，實質上是中共長期「以工代賑」的思維模式，即讓老百姓幹活換錢，不能白給錢。</div>
@@ -36,4 +35,3 @@ author: 透視中國
 <div class="draft-block draft--p left">通脹還會給中國央行帶來加息的壓力。中國央行有個3%的通脹警戒線，美聯儲的警戒線是2%，一旦通脹超過警戒線，央行就要考慮加息。目前全世界都看到了美聯儲無視自己的警戒線，遲遲不加息帶來的嚴重政治、經濟惡果。如果中國通脹高漲，央行可能不得不加息。這相當於給目前正陷入困境的中國經濟再潑上一盆冷水。那央行能否假裝沒看到通脹，就是不加息呢？這樣人民幣匯率會面臨貶值的壓力，內外資會流出大陸尋求保值，還是會削減中國銀行系統中的存款，進而迫使放貸規模收縮，升高銀行擠兌的風險。</div>
 <div class="draft-block draft--p left">通脹的預期還會使一批居民和企業資金流入房地產尋求保值和增值。在中美科技戰打得如火如荼的當下，中共希望社會資金大量流向實體經濟和科技研發。如果資金再流入房地產，不但會同科技創新爭奪資金，還會推高企業的用工成本，還會讓能賺上容易錢的企業和地方政府，更不願將資金投入擴大生產和科研等風險極大的領域。這將使中國在與美國的科技競爭中處於不利地位。如果中國的房價再出現一波攀升，不但會進一步加大中國社會的貧富分化，還會打臉正在尋求連任的習近平，因為「房住不炒」政策，被視為他的一大政績。</div>
 <div class="draft-block draft--p left">小結一下，雖然中共的清零防疫政策給中國民眾帶來了災難性的後果，但要中共給全國老百姓發錢救助，在理念、籌資、監管、社會影響等方方面面都需要很大的突破和變革。而今年，中共最大的事是在11月的「二十大」上定下下任黨魁人選，為此各派正在展開激烈內鬥，此時給全國民眾發錢，具有高度的政治風險性和不確定性，很容易讓政治對手抓到把柄。因此民眾面對難關，還是要靠自己多了解真相，千萬別指望中共救助。◇</div>
-<div class="draft-block draft--p left"></div>
