--- a/_posts/2022-06-08-VOCUS-鈷藍愛戀-在性別與性向的畫框外.html
+++ b/_posts/2022-06-08-VOCUS-鈷藍愛戀-在性別與性向的畫框外.html
@@ -44,4 +44,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/d0676e0c-99ce-419d-af1a-313b8103c205.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">不過我覺得《鈷藍愛戀》在一些地方上是印度對同性戀電影的突破，雖然絕大部分還是在說男男情愛，但帶出了很多印度社會的問題，尤其妹妹阿努賈更是印度長久的問題，父母秤金論兩的要把女兒嫁給自己看中的對向、還有將逃跑的女兒關在屋內等事件，都可以說同性戀電影不只說同性戀，也說出「印度長久以來對性別性向不平等」的許多問題。</div>
 <div class="draft-block draft--p left">某方面房客代表也許是主角不敢正視印度社會對同性戀的眼光，而意亂情迷栽進自己建構出來的祕密花園和美好想像中。而當人去樓空以後才是印度對於同性社會下最血淋淋的結果，大夢初醒後還是回到心靈的監獄。不僅讓人想起過去華人同志電影中一再再表達的同志困境，在印度不同地方掙扎上演。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/Evslg1cBbm8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/Evslg1cBbm8"></iframe></div>
