--- a/_posts/2022-06-07-INMEDIA-古思堯煽動案-認製棺材抗議-國安法-及一黨專政-事前警方上門警告但無理會.html
+++ b/_posts/2022-06-07-INMEDIA-古思堯煽動案-認製棺材抗議-國安法-及一黨專政-事前警方上門警告但無理會.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/06072300-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>75歲患末期直腸癌的古思堯，涉製作寫有「打倒共產黨」、「香港國安法，食屎都發達」的棺材，計劃於北京冬奧開幕日到中聯辦抗議，惟未出發已被國安處拘捕。他否認「企圖作出或準備作出一項或多項具煽動意圖的行為」罪，今（7日）於西九龍法院續審。庭上播放古思堯的錄影會面，他承認製作棺材以表達對中國政府的不滿，批評「有《國安法》，政府想做乜都可以」、中國政府執政數十年「逼害、殺害嘅人比日本侵略中國所死嘅人更加多」 、一黨專政「鍾意點做壞事人民係冇權監督」。他又透露，在做好棺材後，西區警民關係科的「Michael」曾上他家警告他勿去中聯辦，但他沒有理會：「我知道做咗嘅，承擔。」</p>
 <p><strong>古思堯認製作棺材 以在冬奧向中國政府抗議</strong></p>
-<p>庭上今播放古思堯的錄影會面，他表明不需要律師陪同。古在會面中承認於2021年12月尾，獨自在單位後巷花了兩日設計和製造涉案棺材，棺材由木板和木方製成，以白油打底、再漆上金色，並用黑色和藍色箱頭筆在棺材及白色直幡上寫字。</p>
+<p>庭上今播放古思堯的錄影會面，他表明不需要律師陪同。古在會面中承認於2021年12月尾，獨自在單位後巷花了兩日設計和製造涉案棺材，棺材由以往示威剩餘的木板和木方製成，以白油打底、再漆上金色，並用黑色和藍色箱頭筆在棺材及白色直幡上寫字。</p>
 <p>古思堯解釋，製作棺材目的是趁中國冬奧開幕禮向中國政府抗議。他批評，中國自稱強國、大國，但有些政策與國家富強完全脫節，違反人權，當局隨意拘捕異見人士、學者、工會領袖、記者和維權律師等，進行秘密審訊和關柙，故打算抬棺材去中聯辦，「對中國政府表示不滿」。古又批評，香港頒布《國安法》後，中國政府在香港「大開殺戒」，將民主派大肆拘捕，現時多人仍以不同罪名關柙或坐牢。</p>
 <p><strong>批《國安法》屬「惡法」 共產黨「邪惡」要打倒</strong></p>
 <p>就棺材和直幡上的字句，古解釋，寫上「香港國安法，食屎都發達」，是因《國安法》是「惡法」，隨意將民主派大肆拘捕。他批評，「有《國安法》，政府想做乜都可以」，「總之對一黨專政有利、對共產黨有利，香港嘅國安處人員都會做⋯⋯國安處大晒，鍾意點做都得」。</p>
