--- a/_posts/2022-06-08-PQ-空也上人與他的言靈.html
+++ b/_posts/2022-06-08-PQ-空也上人與他的言靈.html
@@ -8,7 +8,7 @@ tags: blog
 author: 詹雅仁
 ---
 
-<p>空也上人，日本平安時代中期的一位知名僧人。最近《東京國立博物館》舉辦了關於他的特展，在武漢肺炎為全世界帶來傷病恐慌、影響難以估算的此刻，重新溫習這位高僧的傳說顯然具有時代意義。</p>
+<p>空也上人，日本平安時代中期的一位知名僧人。最近東京國立博物館舉辦了關於他的特展，在武漢肺炎為全世界帶來傷病恐慌、影響難以估算的此刻，重新溫習這位高僧的傳說顯然具有時代意義。</p>
 
 
 
