--- a/_posts/2022-06-09-INMEDIA-逾70年歷史李基紀念醫局不獲古蹟辦擬議評級-本研社-評審忽視社會性-組合性.html
+++ b/_posts/2022-06-09-INMEDIA-逾70年歷史李基紀念醫局不獲古蹟辦擬議評級-本研社-評審忽視社會性-組合性.html
@@ -14,8 +14,8 @@ author: 獨媒報導
 <p>李基紀念醫局位於九龍城賈炳達道99號，於1951至1952年建成，樓高一層，由九龍城街坊福利會倡議興建，後獲李耀祥夫婦和政府出資興建，最終為紀念李耀祥的父親李基而因此命名。醫局由第一代香港華人建築師周耀年、李禮之的建築事務所設計，當年的奠基石仍置於其正門，至今仍為醫管局轄下的普通科門診診所。</p>
 <p>早前市建局就「龍城區市區更新研究」提交初步結果，當中包括興建一幢新綜合政府大樓，將九龍城市政大廈、九龍城獅子會健康院及李基紀念醫局遷入。而就古諮會對李基紀念醫局不作評級的建議，市建局稱已聘請保育建築師為該建築作初步評估，將會再制定合適方案。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/XZF29x" title="DSC_5518"><img src="https://live.staticflickr.com/65535/52124145690_5656dd3c11_z.jpg" width="640" alt="DSC_5518" /></a></p>
-<p><strong>本研社：評審較忽視社會性、社會性</strong></p>
-<p>本土研究社研究員鄭捷龍向《獨媒》表示，古蹟辦的歷史建築評審小組對50年代及之後的歷史建築往往有較低的評級，評級時亦多數較著重建築特色及罕有度，較忽視古蹟的社會性、社會性，例如近年觀塘健康院、石硤尾健康院及屯門診所等皆在不被評級下計劃拆卸或甚已經拆卸。</p>
+<p><strong>本研社：評審較忽視社會性、組合性</strong></p>
+<p>本土研究社研究員鄭捷龍向《獨媒》表示，古蹟辦的歷史建築評審小組對50年代及之後的歷史建築往往有較低的評級，評級時亦多數較著重建築特色及罕有度，較忽視古蹟的社會性、組合性，例如近年觀塘健康院、石硤尾健康院及屯門診所等皆在不被評級下計劃拆卸或甚已經拆卸。</p>
 <p>他強調，李基紀念醫局是二戰後區內首批公共設施之一，同時也是為數不多的50年代社區基礎醫療設施，屬九龍城舊區的地標。而醫局與旁邊的九龍城獅子會學生健康服務中心、九龍城長者健康中心及九龍城市政大廈亦構成了九龍城公共建築群，發展局於2010年的《市區更新地區願景研究》亦曾將醫局考慮納入社區生活文物徑的一部分。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/x2MXwC" title="由本土研究社研究員鄭捷龍提供。"><img src="https://live.staticflickr.com/65535/52130810097_2903b9e11b_z.jpg" width="640" alt="由本土研究社研究員鄭捷龍提供。" /></a><br /><em>相片由本土研究社研究員鄭捷龍提供</em></p>
 <p>鄭捷龍亦批評，醫院管理局未曾主動提及要求重建醫局，而市建局亦未曾就此進行公眾諮詢，未取得社會各界共識，故認為今次遷移醫局屬市建局單方面的意願。他續指，醫局作為服務基層多年的社區醫療設施，在街坊之間亦充滿集體回憶，擔心是次重建將會對街區面貌、地區形象等方面帶來嚴重衝擊。</p>
