Update VOCUS 2022-06-10 patch

--- a/_posts/2022-06-09-VOCUS-日本文豪失戀旅行-佐藤春夫的殖民地之旅.html
+++ b/_posts/2022-06-09-VOCUS-日本文豪失戀旅行-佐藤春夫的殖民地之旅.html
@@ -45,6 +45,6 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">《殖民地之旅》還有許多精彩的推理過程，但受限於時間跟篇幅，還是推薦大家趁書展機會，找來親自讀一讀吧！​</div>
 <div class="draft-block draft--p left">書中還有一篇我很喜歡的森丑之助篇章，在影片有更詳細的介紹喔，歡迎到我的 YouTube 頻道「熬夜的便當」看最新影片！</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/ooltL7Ojl2g"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/ooltL7Ojl2g"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">我是臺灣歷史主題的小說創作者，喜愛分享歷史、文學小知識給大家！歡迎訂閱我的 <a href="https://www.youtube.com/channel/UCG-GytKfJ_VJHdrzVCs32Yg" target="_blank" class="draft--a">Youtube 頻道「熬夜的便當」</a>以及 <a href="https://www.instagram.com/pan.yutang/" target="_blank" class="draft--a">IG pan.yutang</a> 得到更多新的歷史小故事喔！</div>
