--- a/_posts/2022-06-09-VOCUS-皇冠雜誌-𝐍𝐎.-𝟖𝟐𝟎-走進安妮的日記.html
+++ b/_posts/2022-06-09-VOCUS-皇冠雜誌-𝐍𝐎.-𝟖𝟐𝟎-走進安妮的日記.html
@@ -8,4 +8,24 @@ tags: blog
 author: 私の部屋：世界、歷史、人生的万華鏡
 ---
 
-<p><br></p>
+<img src="https://images.vocus.cc/3d3f527c-3f34-4aa7-ad59-26dd8a5a6363.jpg">
+<p>75年了，妳的日記一直都在，</p>
+<p>獨夫企圖用鮮血打造長城，</p>
+<p>妳的筆，讓高牆灰飛煙滅；</p>
+<p>惡棍放膽以謊言掩蓋歷史，</p>
+<p>妳的字，讓真相清澈如鏡。</p>
+<p>鷹犬築起禁錮自由的世界，</p>
+<p>妳，用愛與希望，打破黑牢枷鎖。</p>
+<p>魔鬼奪去照亮人間的旭日，</p>
+<p>妳，以天使之名，點燃永晝之焰。</p>
+<p>曾有一位少女，</p>
+<p>在滿是絕望的逆境中，永不放棄，</p>
+<p>有人活著，然靈魂已死；</p>
+<p>有人死了，但精神長存。</p>
+<p>自以為是的大人，</p>
+<p>高談遠見卻忘了夢想、</p>
+<p>勾勒藍圖卻捨棄信念，</p>
+<p>75年後，妳的日記一直都在，</p>
+<p>又一次，</p>
+<p>狠狠地為我們上了一課。</p>
+<blockquote>真的非常榮幸（受寵若驚啦！），可以接受《皇冠雜誌》的邀稿，參與《安妮日記》（HET ACHTERHUIS）出版75周年特別企劃的行列。在本次專題裡，不算作家的我，很高興可以跟其他8位知名作家，與諸多讀者們一同重返《安妮日記》的現場，透過十三歲少女的書寫，將兩年不見天日的壓抑歲月全然記錄在一本紅色的日記本上，除了是戰亂烽火的時代見證，安妮的早熟、開朗，更充分展現於豐沛的文字上，自然真摯且撼動人心。</blockquote>
