--- a/_posts/2022-06-09-VOCUS-莎木-經典遊戲首次動畫化.html
+++ b/_posts/2022-06-09-VOCUS-莎木-經典遊戲首次動畫化.html
@@ -44,4 +44,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/dc80e0dd-1ab0-4e7a-a1d9-5ccbb81cf617.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">《莎木》動畫雖然也適度的調整了動畫的節奏，但我覺得因為劇情內容本來就是偏向空想的中國，故也無法調整太多由遊戲轉變成動畫的尷尬。但《莎木》動畫的優點某方面也是賣了老玩家的情懷。過去重要角色幾乎都有登場，並且在劇情分配上也呈現的不錯，甚至在打鬥上展現出優於遊戲的效果，但這對遊戲來說似乎不是件好事。</div>
 <div class="draft-block draft--p left">整體來說動畫版的《莎木》是一個快速讓新玩家了解《莎木》遊戲三代之前的前導作品，在製作上也算得上是用心，但如果可以在將一些遊戲轉變成動畫載體的劇情和人物對話的尷尬感抹滅會更好一些，畢竟遊戲慘被動畫化和真人化的跨平台事件可以說大家都已經習慣了。只求不要亂搞這點，《莎木》動畫算是盡心盡力成了一部不錯的遊戲入門。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/zTm0go2vkVI"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/zTm0go2vkVI"></iframe></div>
