--- a/_posts/2022-06-09-VOCUS-撰寫自傳3大關鍵-讓你的履歷被看見.html
+++ b/_posts/2022-06-09-VOCUS-撰寫自傳3大關鍵-讓你的履歷被看見.html
@@ -8,4 +8,63 @@ tags: blog
 author: 我是文案
 ---
 
-<p><br></p>
+<p>說到履歷表，你想到的是西方文化裡強調精簡、重視技能展現的條列式履歷，還是華人文化中重視前因後果描述的自傳式文章呢？</p>
+<p>如果我們需要寫的是長篇幅的「自傳」，遵循以下幾個撰寫要點能讓你的履歷表脫穎而出！</p>
+<img src="https://images.unsplash.com/photo-1630673394533-b13bef31abf2">
+<h3>以「重要影響」而非「時間序列」撰寫</h3>
+<p>求學時期以起、承、轉、合方式撰寫的作文內容，對分秒必爭的商業環境來說過於冗長；如果想要寫出清楚易懂的商業文章，可以採用麥肯錫顧問芭芭拉‧明托（Barbara Minto）提出的<a href="https://www.managertoday.com.tw/glossary/view/208">金字塔寫作法</a>，訂出一個主題重點，並述說好幾個不同的觀點來增加說服力。</p>
+<blockquote>運用這種寫作手法時，你需要將「結論」放在文章的開頭，再依序回答文章主題中的問題。</blockquote>
+<p>例如以下這個例子：</p>
+<blockquote>【錯誤】我從小生長在一個和諧的家庭，求學時我熱愛參與課外活動，讓我養成了開朗的性格。</blockquote>
+<p>這個例子中，求職者的生長背景與招募者沒有利益相關，也沒有點出個人特質與工作的關係，且缺乏細節。</p>
+<blockquote>【正確】我是一個開朗的人，能有效的擔任團體中的溝通潤滑角色。例如從小就能在父母爭吵前緩和氣氛、也參加過10個課外社團、且每週以線上課程自學關於溝通社交的內容。</blockquote>
+<p>撰寫時應該將結論放在最前面，並且說明為何這個特質重要。舉例時使用事件、場景和數字來進行更細節的說明。</p>
+<h3>為各段落下一個清楚的標題</h3>
+<p>與傳統作文只會在開頭下一個題目不同，自傳中的每個段落最前面，都建議提綱挈領的用一句話描述這個段落想要講述的內容。</p>
+<p>自傳當中包含的內容，往往不脫以下幾個範圍：</p>
+<ol>
+  <li>家庭背景</li>
+	<li>求學過程與校園生活</li>
+	<li>校園表現&社團生活</li>
+	<li>人格特質</li>
+	<li>專業領域能力</li>
+	<li>工作經歷</li>
+	<li>證照、獲獎等特殊表現</li>
+</ol>
+<p>各個段落可以提及的內容，會隨著求職者的職涯經歷而有所不同。例如新鮮人可以將重點放在個人特質和社團經歷，而已有相當工作經驗的人，則建議將描寫的重點放在如何培養專業技能與解決問題的經驗上。</p>
+<p>但是若以故事性的敘事方法描寫時，太多的前因後果連結或者抽象描寫，有時會讓閱讀者一時之間難以抓住重點，這時候用小標題的一句話代為點出重點就很重要，這樣可以讓你的自傳被閱讀並留下印象的機會增加。</p>
+<img src="https://images.unsplash.com/photo-1589652717406-1c69efaf1ff8">
+<h3>強化職缺所需技能的描述</h3>
+<p>在撰寫自傳時，可以列出欲應徵職缺所有需要的技能和人格特質，找出自身具備的相對應優勢三至五個，當作撰寫自傳前的段落大綱，再依此撰寫。這樣可以讓自傳當中的內容更加精確的對應職缺的需要。</p>
+<p>以下拿「行銷企劃」所需的職能以及個人特質的挑選來舉例如下：</p>
+<p><b>個人專業技能與特質（挑選前）</b></p>
+<ul>
+	<li>創意圖文執行</li>
+	<li>活動策劃</li>
+	<li>網頁製作</li>
+	<li>文書處理</li>
+	<li>內向</li>
+	<li>細心</li>
+	<li>抗壓性強</li>
+	<li>熱愛學習</li>
+</ul>
+<p><b>行銷企劃職能與特質（挑選前）</b></p>
+<ul>
+	<li>行銷活動與策略企劃</li>
+	<li>效益分析</li>
+	<li>行銷工具使用</li>
+  <li>市場敏銳度</li>
+</ul>
+<p><b>大綱訂定（挑選後）</b></p>
+<ul>
+	<li>用敏銳觀點，創造獨特視角議題</li>
+	<li>學習力旺盛，快速上手各項數位工具</li>
+	<li>細心負責補足創意團隊短處</li>
+</ul>
+<p>在範例中我們可以看到，就算自己有許多不同的人格特質，但是不一定要把所有的優點全部寫出來，反而流於雜亂沒有重點；只要挑選自己最想強調或者與職缺最相關的專長或人格特質，就能夠訂出一份具有說服力的自傳大綱。擁有清楚的大綱後，再圍繞著每一段的重點來著手撰寫說明題旨的內容細節，將會容易許多。</p>
+<h3>特定職位：要注意錯字等寫作細節</h3>
+<p>最後，雖然注意錯別字是老生常談，且即便因為電子媒體的盛行，讓各部門主管對於錯別字的觀念可能稍稍放寬，但類似的錯誤對某些職位來說，絕對是萬萬不可出現的大忌。</p>
+<blockquote>例如高度重視正確性的會計、法務，或者經常需要發出對外文件的公關等職位，對於自傳中錯字的容忍度會比一般職位來得更低。</blockquote>
+<p>除了錯別字之外，常見的錯誤還有稱謂、成語、標點符號與排版格式的誤用。如果想要撰寫一份有效而精準的自傳，除了專注於清楚表達內容之外，善用正確的寫作細節，就是將第一印象完美展現的最後一哩路！</p>
+<p>認為這篇文章有價值的讀者，請按個喜歡或追蹤，以讓我未來能有機會跟大家分享更多文案工作的內容，也歡迎來《<a href="https://www.facebook.com/xicopywriter/">我是文案</a>》玩。</p>
+<p>更多浪費才能的內容就在 【<a href="https://pse.is/BXANA">商業文案全解析，擁有你的寫作孵化器</a>】線上課程</p>
