--- a/_posts/2022-06-09-PQ-看不下去-吹哨者揭露侯友宜市長打死不想公開的通聯報告.html
+++ b/_posts/2022-06-09-PQ-看不下去-吹哨者揭露侯友宜市長打死不想公開的通聯報告.html
@@ -16,7 +16,7 @@ author: 楊是命
 
 
 
-<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。.jpg" alt="" class="wp-image-103904" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。-300x197.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。-768x503.jpg 768w" sizes="(max-width: 600px) 100vw, 600px" /><figcaption>恩恩爸不斷訴求真相，但新北市府至今仍消極回應。<br>（圖／中央社）</figcaption></figure></div>
+<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。.jpg" alt="" class="wp-image-103904" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。-300x197.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。-768x503.jpg 768w" sizes="(max-width: 600px) 100vw, 600px" /><figcaption>恩恩爸不斷訴求真相，但新北市府至今仍消極回應。<br>（圖／中央社）</figcaption></figure></div>
 
 
 
