Update VOCUS 2022-06-11 patch

--- a/_posts/2022-06-10-VOCUS-johnny-depp-有故事的男人.html
+++ b/_posts/2022-06-10-VOCUS-johnny-depp-有故事的男人.html
@@ -41,22 +41,16 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <blockquote class="draft-block draft--blockquote">迪士尼高層：「你這樣子是喝醉了還是怎樣？」</blockquote>
 <blockquote class="draft-block draft--blockquote">Johnny：「這就是我的選擇，你知道我的能力。如果你選擇相信我，就要給我這個權力。」</blockquote>
 <div class="draft-block draft--p left">（這只有雙子男才敢這樣講吧？）</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/FwauqxGbgQ0"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/FwauqxGbgQ0"></iframe></div>
 <div class="draft-block draft--p left">如今，推出五部的《神鬼奇航》（Pirates of the Caribbean）電影系列，儼然已成為了新世代海盜船電影的典範。當然，<span style="font-weight: bold; ">作為船長「本尊」的Keith Richard，更於第三集《世界的盡頭》（Pirates of the Caribbean: At World's End）中亮相，飾演Captain Teague一角！是的，正巧就是Captain Jack Sparrow的父親。</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/78ef71f3-5df8-47f8-8b77-196ff4c09fae.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">西元2007年，Johnny職業生涯第六次與波頓合作，演出由百老匯同名音樂劇所改編而來的《瘋狂理髮師：倫敦首席惡魔剃刀手》（Sweeney Todd: The Demon Barber of Fleet Street），以殺紅眼的暗黑復仇者身分再次引起了話題討論；更讓強尼第三次獲得奧斯卡金像獎最佳男主角的提名！</div>
 <div class="draft-block draft--p left">在《死無對證》（Pirates of the Caribbean: Dead Men Tell No Tales）謝幕，第五次乘風破浪飾演鬼盜船船長之後，西元2017年和西元2018年，兩部大作重磅級電影《東方快車謀殺案》（Murder on the Orient Express）和《怪獸與葛林戴華德的罪行》（Fantastic Beasts: The Crimes of Grindelwald），Johnny都參與其中。</div>
 <h3 class="draft-block draft--h3" name="header-d58fc">「算是歪打正著吧？！前面四、五部作品，老實說，純粹就是為了付房租，我根本不鳥電影，我是做音樂的，是個吉他手！但電影就這樣一路過來，30年了，我居然現在還在這裡...呃，有點奇怪！」</h3>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/9wDrGHzq37Q"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/9wDrGHzq37Q"></iframe></div>
 <div class="draft-block draft--p left">被譽為是世界上最偉大的影星之一，也曾兩度被評選為全球最性感男士第一名，甚至登上過《金氏世界紀錄》最高薪票房演員的不二王座，Johnny，從西元2016年以降，伴隨與赫德（Amber Heard）婚姻官司的連年訴訟，在「假掰至上」的娛樂圈產業裡，莫名被迫失去了戲約舞台（好萊塢私底下抵制爭議演員的亮相機會），即使在西元2022年6月初，美國維吉尼亞州法院裁定赫德須賠償美金1035萬元給強尼哥，但Johnny……</div>
 <h3 class="draft-block draft--h3" name="header-9nlv">「『簡單』！這就是我想要的……我很享受能夠和我的伴侶一起出去玩、看報紙，然後坐下來，閱讀我敬佩的人所寫的書，比如克勞斯（Lawrence Krauss，理論物理學家）或希鈞斯（Christopher Hitchens，作家），就是這樣……『簡單』，好萊塢的『遊戲』不復存在。」</h3>
-<h3 class="draft-block draft--h3" name="header-9pv9q"></h3>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/-oeZ0nFsExs"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/-oeZ0nFsExs"></iframe></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/b1b5325a-30c4-4055-948a-3b3bd275823e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/ca85c5c2-1ab1-4927-aad4-a265325f45bd.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
@@ -65,4 +59,3 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left"><a href="https://smoda.elpais.com/moda/actualidad/sauvage-de-dior-cuya-imagen-es-johnny-depp-sigue-aumentando-sus-ventas-tras-la-retransmision-del-juicio/" target="_blank" class="draft--a">https://smoda.elpais.com/moda/actualidad/sauvage-de-dior-cuya-imagen-es-johnny-depp-sigue-aumentando-sus-ventas-tras-la-retransmision-del-juicio/</a></div>
 <div class="draft-block draft--p left"><a href="https://www.voguehk.com/zh/article/art-lifestyle/johnny-depp-is-being-considered-to-return-as-captain-jack-sparrow/" target="_blank" class="draft--a">https://www.voguehk.com/zh/article/art-lifestyle/johnny-depp-is-being-considered-to-return-as-captain-jack-sparrow/</a></div>
 <div class="draft-block draft--p left"><a href="https://alpes-holidays.com/johnny-depps-attorneys-question-remote-witnesses-as-trial-in-suit-against-ex-wife-amber-heard-continues/" target="_blank" class="draft--a">https://alpes-holidays.com/johnny-depps-attorneys-question-remote-witnesses-as-trial-in-suit-against-ex-wife-amber-heard-continues/</a></div>
-<div class="draft-block draft--p left"></div>
