--- a/_posts/2022-06-10-VOCUS-台灣男子葉石濤-寫台灣的筆觸.html
+++ b/_posts/2022-06-10-VOCUS-台灣男子葉石濤-寫台灣的筆觸.html
@@ -46,5 +46,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">在看《台灣男子葉石濤》這部紀錄片時，我常想到自己寫作的耽美文體、BL創作中，中國是這一塊華文圈最大的市場，故創作者與出版社每每都會自我審查，甚至使用中國的文體去創作，甚至討好中國寫出中共的大中國思想，在看到《台灣男子葉石濤》片段中，葉石濤有意無意的寫出一些討好國民黨政府的文字而求自保時，不免讓我想到：</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">「即便到現在台灣給予我們民主自由的創作，我們有必要為了中國政治思想，只為了讓出版社和中國接受，而改變我們創作的初衷與立場嗎？」</div></div>
 <div class="draft-block draft--p left">還記得某個出版社寫上「莫忘初衷」四字，被一些台灣耽美讀者嘲諷之事。我認為再已經創作自由甚至性愛不須刪減和上馬賽克的台灣，在需要中國市場與我的台灣創作之間，我們這些作為台灣創作人是怎麼想，至少我選擇了，同時慶幸我在這點沒有改變、也沒有妥協。</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/IEabr6P1DYY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/IEabr6P1DYY"></iframe></div>
