--- a/_posts/2022-06-10-PQ-新北sop問題遭踢爆-侯友宜漠視基層消防專業釀悲劇.html
+++ b/_posts/2022-06-10-PQ-新北sop問題遭踢爆-侯友宜漠視基層消防專業釀悲劇.html
@@ -24,7 +24,7 @@ author: Salima
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。.jpg" alt="" class="wp-image-103904" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。-300x197.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。-768x503.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>恩恩爸不斷追求真相。圖／中央社。</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。.jpg" alt="" class="wp-image-103904" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。-300x197.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/79edab52-恩恩爸不斷追求真相。圖／中央社。-768x503.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>恩恩爸不斷追求真相。圖／中央社。</figcaption></figure>
 
 
 
