Update VOCUS 2022-06-12 patch

--- a/_posts/2022-06-11-VOCUS-讀-古典音樂之愛-與我的古典樂探索之旅.html
+++ b/_posts/2022-06-11-VOCUS-讀-古典音樂之愛-與我的古典樂探索之旅.html
@@ -15,10 +15,10 @@ author: Kuan
 <div class="draft-block draft--p left">應該不會有人否認，音樂與回憶是多麽緊密的連結，這些古典樂曲在我腦中喚醒的，並不是什麼刻骨銘心的記憶，而是些被裝箱塵封了許久許久的，幾乎沒有其他方式能夠憶起的小事。</div>
 <div class="draft-block draft--p left">去年一段從新竹通勤到臺北工作的日子，只要下班一上了車，我都會播馬勒的第二號交響曲，因為時間很剛好，只要聽見第四樂章的女聲獨唱，睜開眼睛就是新竹街景。現在再聽這首樂曲，彷彿會聞到客運皮椅的氣味，還有離開辦公室的心情。</div>
 <div class="draft-block draft--p left">有天下午，聽見音響傳來熟悉的放學鐘聲，那是離開小學後早就忘記的旋律，原來是來自德弗札克的第九交響曲；或是聽卡農時，回想起小時候看《我的野蠻女友》哭得一塌糊塗的黑歷史。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/pHyN3izk38c"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/pHyN3izk38c"></iframe></div>
 <div class="draft-block draft--p left">（從 1:04 開始的那段旋律，很讓人懷念吧？）</div>
 <div class="draft-block draft--p left">不只是往事，也常遇見曾在電影中聽過而留下印象的曲目：《大開眼戒》裡令人發寒的圓舞曲，來自俄國作曲家蕭士塔高維奇、卓别林打開收音機，出現的是布拉姆斯的匈牙利舞曲，以及《發條橘子》和《決殺令》裡，一再出現的貝多芬。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/H19jByxrqlw"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/H19jByxrqlw"></iframe></div>
 <div class="draft-block draft--p left">我們的記憶裡，存在許多沒有名字的旋律，他們也許不像命運交響曲的前四個音符那麼令人印象深刻，但你知道你曾經沈浸在這段旋律裡。若少了這些旋律，經驗過的那段往事與電影會不會少了幾分精彩？我想是的。</div>
 <div class="draft-block draft--p left">再次遇見這些旋律，並找回它們的名字，是聆聽旅程中的樂趣之一。但是，在咀嚼完美好的回憶後，為什麼我還會想要繼續探索下去呢？對我來說，古典樂的魅力是什麼？</div>
 <h2 class="draft-block draft--h2" name="header-163ot">古典樂的魅力</h2>
@@ -31,9 +31,9 @@ author: Kuan
 <div class="draft-block draft--p left">從不同的方式理解音樂，你會感受到這些旋律並不只是音符的排列與組合，也是一段對話、獨白、夢境、宇宙漂流或在寧靜的樹林間散步。</div>
 <div class="draft-block draft--p left">若聽貝多芬晚年創作的奏鳴曲，你會聽見作曲家將現實的悲慘縫入樂譜裡，那時，他已經喪失全部聽力，冗長的監護權訴訟使他精神飽受折磨，健康與經濟狀況陷入困頓。</div>
 <div class="draft-block draft--p left">而第 29 號奏鳴曲的第三樂章，就像綿長的哀傷在幽暗低谷裡徘徊；像長途火車窗外千篇一律的風景；也像聲音低沈的老人，控訴上天讓他遭遇不幸的無盡嘆息。</div>
-<div><iframe allowfullscreen src="https://open.spotify.com/track/0kVycg4ud5I4zTPaiMcA6s?si=858120603b3040c0"></div>
+<div><iframe allowfullscreen src="https://open.spotify.com/track/0kVycg4ud5I4zTPaiMcA6s?si=858120603b3040c0"></iframe></div>
 <div class="draft-block draft--p left">但同時，我們也聽到強烈的希望，與對人類的熱愛，透過第九號交響曲拔山倒樹而來，那是一首能夠淹沒思緒的磅礴交響曲，說明了貝多芬的作品不只是公認的傑作，也是對普世的關懷，這份關懷從致敬「自由、平等與博愛」的英雄交響曲，到高唱團結、友愛的第九號交響曲皆是如此。</div>
-<div><iframe allowfullscreen src="https://open.spotify.com/track/1zaZr9RVoKiKyXyivq1n22?si=d87611addc6b4101"></div>
+<div><iframe allowfullscreen src="https://open.spotify.com/track/1zaZr9RVoKiKyXyivq1n22?si=d87611addc6b4101"></iframe></div>
 <div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-b1ti4">你永遠是樂曲的最終詮釋者</h2>
 <div class="draft-block draft--p left">你認識的古典樂曲，不會永遠保持同一個形象，你對它的理解（無論是樂曲結構或是背景）、聆聽時的情緒、讀樂評或導聆，都會改變你對它的認識。</div>
