--- a/_posts/2022-06-12-PQ-報呱全世界-ep111-貓貓家家酒-ft.四叉貓.html
+++ b/_posts/2022-06-12-PQ-報呱全世界-ep111-貓貓家家酒-ft.四叉貓.html
@@ -25,7 +25,7 @@ author: 編輯室
 
 
 <figure class="wp-block-embed is-type-rich is-provider-spotify wp-block-embed-spotify wp-embed-aspect-21-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="Spotify Embed: 【報呱全世界】EP111 貓貓家家酒  ft.四叉貓" style="border-radius: 12px" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" src="https://open.spotify.com/embed/episode/0dshDgxEiXoyEQU7vRnhSr?utm_source=oembed"></iframe>
+<iframe loading="lazy" title="Spotify Embed: 【報呱全世界】EP111 貓貓家家酒  ft.四叉貓" style="border-radius: 12px" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" src="https://open.spotify.com/embed/episode/0dshDgxEiXoyEQU7vRnhSr?utm_source=oembed"></iframe>
 </div></figure>
 
 
