Update VOCUS 2022-06-14 patch

--- a/_posts/2022-06-13-VOCUS-給阿媽的一封信-我的歷史故事.html
+++ b/_posts/2022-06-13-VOCUS-給阿媽的一封信-我的歷史故事.html
@@ -38,8 +38,6 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/15cbc464-8cdb-4738-8797-3e2166c855f9.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/4fa0ef74-f251-4b34-9edf-1038eb12fcd7.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">而同樣的《給阿媽的一封信》很可惜的是它的意義大於這部電影呈現出來的效果，從片名、拍攝手法到受訪者呈現故事的方式，其實並不吸引人，這也是電影跟這項計畫中最大一個隱憂：當這段故事老一輩不願意說、年輕人對自己家庭沒有認同感等。現實是並非所有家庭都以愛為前提，這也使一些故事到頭來還是無法被看見。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">現實比小說更離奇，而最大的悲劇是有段記憶但卻無人憶記。</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">作為一個喜歡故事的我，這樣屬於台灣長輩的歷史故事，本質上讓我們重新看見台灣土地架構出來的那種魔幻寫實的人生。有因白色恐怖逃往巴西求生、前往滿州國遇戰亂死裡逃生的司機、祖父是過去威權政府的加害者、原住民女孩與日本軍官的愛情故事、難忘中國家鄉但卻認親統一無望的老兵、為躲避白色恐怖追捕而建起地窖躲藏18年的知識份子的父親。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/YeboPucVRVo&t=1s"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/YeboPucVRVo&t=1s"></iframe></div>
