--- a/_posts/2022-06-14-PQ-印度執政黨仇視伊斯蘭言論-引爆國內外宗教與外交衝突.html
+++ b/_posts/2022-06-14-PQ-印度執政黨仇視伊斯蘭言論-引爆國內外宗教與外交衝突.html
@@ -32,7 +32,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0a318e6f-fvcpbpcakaaepck.png" alt="" class="wp-image-104372" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0a318e6f-fvcpbpcakaaepck.png 720w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0a318e6f-fvcpbpcakaaepck-300x167.png 300w" sizes="(max-width: 720px) 100vw, 720px" /><figcaption>印度的印度教群眾亦走上街頭力挺執政黨發言人夏爾瑪（Nupur Sharma），兩派群眾對立越來越嚴重，爆發嚴重的宗教衝突。<br>圖／Raghav Jangid
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0a318e6f-fvcpbpcakaaepck.png" alt="" class="wp-image-104372" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0a318e6f-fvcpbpcakaaepck.png 720w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0a318e6f-fvcpbpcakaaepck-300x167.png 300w" sizes="(max-width: 720px) 100vw, 720px" /><figcaption>印度的印度教群眾亦走上街頭力挺執政黨發言人夏爾瑪（Nupur Sharma），兩派群眾對立越來越嚴重，爆發嚴重的宗教衝突。<br>圖／Raghav Jangid
 @mr_raghav__057</figcaption></figure></div>
 
 
