--- a/_posts/2022-06-13-INITIUM-早报-习近平签署-非战争军事行动纲要-为行动-提供法规依据.html
+++ b/_posts/2022-06-13-INITIUM-早报-习近平签署-非战争军事行动纲要-为行动-提供法规依据.html
@@ -24,11 +24,11 @@ author:
 <p>根据《议定书》，北爱尔兰实际留在欧盟关税同盟和欧洲单一市场，避免北爱与欧盟成员国爱尔兰之间出现“硬边界”，但英国其他地区商品运往北爱必须经海关检查。</p>
 <p>英方立法建议，为英国进入北爱的商品设立“绿色通道”，取消“不必要”检查；北爱企业将获得与英国其他地方企业相同税务优惠；所有贸易争端由独立仲裁机构解决，而非欧盟法院。</p>
 <p>该法案有待英国议会辩论和表决。英国外相特拉斯（Liz Truss）称，这是处理北爱问题“合理且现实”的方案，符合国际法律。英方希望与欧盟协商达成解决方案，以避免该法案成为法律。</p>
-<h3>俄军炸毁乌东西维罗多涅茨克市所有跨河大桥</h3>
-<p><a href="https://www.reuters.com/world/europe/ukrainians-left-with-one-way-out-sievierodonetsk-fierce-fighting-rages-2022-06-13/">乌克兰官员指</a>，在东部城市西维罗多涅茨克争夺战中，俄军已炸毁该市通往河对岸城市利西昌斯克的所有桥梁，切断了人道援助和疏散通道，与此前南部城市马里乌波尔被围困局面相似。</p>
-<p>卢甘斯克州长盖代（Sergei Gaidai）称，所有桥梁被炸毁后，不能开车进入西维罗多涅茨克运送物资，也无法疏散被困平民。</p>
-<p>西维罗多涅茨克争夺战是俄乌两军在顿巴斯地区激战焦点，双方均指对方伤亡惨重。盖代还称，俄军已占领该市70%地区，但乌方守军目前并未被完全包围。</p>
-<p>乌克兰向国际社会发出更加紧急呼吁，要求西方国家提供更多重型武器，保卫西维罗多涅茨克。</p>
+<h3>俄军炸毁乌东北顿涅茨克市所有跨河大桥</h3>
+<p><a href="https://www.reuters.com/world/europe/ukrainians-left-with-one-way-out-sievierodonetsk-fierce-fighting-rages-2022-06-13/">乌克兰官员指</a>，在东部城市北顿涅茨克争夺战中，俄军已炸毁该市通往河对岸城市利西昌斯克的所有桥梁，切断了人道援助和疏散通道，与此前南部城市马里乌波尔被围困局面相似。</p>
+<p>卢甘斯克州长盖代（Sergei Gaidai）称，所有桥梁被炸毁后，不能开车进入北顿涅茨克运送物资，也无法疏散被困平民。</p>
+<p>北顿涅茨克争夺战是俄乌两军在顿巴斯地区激战焦点，双方均指对方伤亡惨重。盖代还称，俄军已占领该市70%地区，但乌方守军目前并未被完全包围。</p>
+<p>乌克兰向国际社会发出更加紧急呼吁，要求西方国家提供更多重型武器，保卫北顿涅茨克。</p>
 <h3>瑞典为加入北约采取行动回应土耳其要求</h3>
 <p>北约秘书长斯托尔滕贝格访问瑞典，昨日与瑞典首相安德森一同<a href="https://www.reuters.com/world/middle-east/nato-chief-says-sweden-has-taken-important-steps-meet-turkeys-demands-2022-06-13/">出席记者会时表示</a>，瑞典已开始采取措施，以满足土耳其同意该国申请加入北约的要求。</p>
 <p>俄罗斯入侵乌克兰产生多米诺骨牌效应，瑞典和芬兰上月申请加入北约，却遭到北约成员国土耳其反对。土耳其指瑞典支持被土方视为恐怖组织的库尔德武装分子，且不满瑞典此前撤销对土耳其的武器出口许可。</p>
