--- a/_posts/2022-06-14-VOCUS-行銷企劃面試-你需要準備的7個問題.html
+++ b/_posts/2022-06-14-VOCUS-行銷企劃面試-你需要準備的7個問題.html
@@ -8,4 +8,29 @@ tags: blog
 author: 我是文案
 ---
 
-<p><br></p>
+<p>如果你看到這篇文章，首先恭喜你已經過關斬將進入面試階段！這同時也代表你的學經歷對公司來說已經初步合格了，面試是更深入了解你的實力與個人特質的場合，在出發之前，預先思考以下7個問題，將能幫助你提高錄取機會。</p>
+<img src="https://images.unsplash.com/photo-1531537571171-a707bf2683da">
+<h3>自我介紹很重要！</h3>
+<p>在面試階段，自己分享的資訊往往會成為對方想要深入詢問的內容，也是對方觀察你是否與企業文化相契合的方式，因此千萬不要輕忽自我介紹這個環節，把它當作例行公事來看待。在自我介紹階段，你可以依據以下兩個問題發想自己要說的內容。</p>
+<h4>1.你有哪些特質或經歷有助於擔任這個職位？</h4>
+<p>可以先閱讀該職位的職務說明，接著與自己的技能或過往經歷對應。如果不確定的話，問問在同產業同職位的朋友，看看他如何描述那個職位的工作內容。</p>
+<h4>2.你為什麼想應徵這個職位？</h4>
+<p>可能是想進入類似產業領域、認為該職位有助職涯發展、也可能是覺得這份工作與自己的個性相符、又或者覺得這份工作與自己的價值觀契合。「為什麼想應徵」其實就等於「為什麼想做這份工作」，而這個問題是你在找工作的過程中，就需不斷好好問自己的。</p>
+<h3>可能是想進入類似產業領域、認為該職位有助職涯發展、也可能是覺得這份工作與自己的個性相符、又或者覺得這份工作與自己的價值觀契合。「為什麼想應徵」其實就等於「為什麼想做這份工作」，而這個問題是你在找工作的過程中，就需不斷好好問自己的。</h3>
+<p>如果你沒有行銷相關經驗而對方又允諾你來面試，多半就是認為你的能力足以培養，這時候展現出你對行銷的熟悉度就很重要。</p>
+<h4>3.覺得目前行銷的趨勢為何？</h4>
+<p>回答這個問題時可以從曝光管道（facebook、youtube、ig、line等）、素材內容（例如政府部門時常使用迷因）、近期時事（例如肺炎導致實體活動取消可以怎麼應對）三個切入點著手，挑選你最有感悟的內容回答。</p>
+<h4>4.試寫一個與目前節慶時事相關的企劃？</h4>
+<p>可以把握三個要點來預先準備實作測驗：創新性、可行性、流行嗅覺。</p>
+<h4>5.你的未來職涯展望是什麼？</h4>
+<p>這個問題與自我介紹的內容呼應，可以回答自己對該職位的期望，還有自己在該職位希望為公司做到哪些具體成就為主。</p>
+<h3>有經驗問：行銷工具與案例</h3>
+<p>公司評斷有相關經驗的應徵者，則會視其過去實績或者觀察操作方式是否符合公司所需，因此問問題也會比較深入，這時候宜拿出具體的內容來回答。</p>
+<h4>6.曾經執行過最具有代表性的案例？</h4>
+<p>被問到這個問題時，回答的內容可以包括創意發想、執行方式、預算規劃、最終轉換數據等。如果有準備相關的行銷素材檔案向面試官簡報更好。</p>
+<h4>7.如果你負責該業務的話，你會用什麼方法去達到公司訂的目標？</h4>
+<p>這個問題問的則是你對各種行銷方式與工具的熟悉程度，例如不同的廣告投放方式、線上與線下的行銷方案、實體活動和展會經驗、媒體與公共關係的經營、同業或異業可供學習的做法等，都可以是你回答的內容。</p>
+<h3>結語</h3>
+<p>行銷企劃只是通稱，還能細分為數位行銷、產品行銷、公關行銷等不同的職位，根據不同行銷職缺事前準備，將更有助於增加錄取的機會。</p>
+<p>認為這篇文章有價值的讀者，請按個喜歡或追蹤，以讓我未來能有機會跟大家分享更多文案工作的內容，也歡迎來《<a href="https://www.facebook.com/xicopywriter/">我是文案</a>》玩。</p>
+<p>更多浪費才能的內容就在 【<a href="https://pse.is/BXANA">商業文案全解析，擁有你的寫作孵化器</a>】線上課程</p>
