--- a/_posts/2022-06-15-INITIUM-如何守护独立报导-端plus会员计划一周年系列活动.html
+++ b/_posts/2022-06-15-INITIUM-如何守护独立报导-端plus会员计划一周年系列活动.html
@@ -10,7 +10,7 @@ author: 端传媒编辑部 发自新加坡
 
 <p>「每一个守护时刻，必将转化成改变的力量。」</p><p>端传媒编辑部 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220615-notes-initium-plus-one-year/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/70289e33bcf8420694319f9c901cb8d6.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p>一年前，为了支持更多独立报导，我们推出了“端Plus会员计划”，希望与你一起守护新闻的独立性，守护你我的独立性。一年之后，我们对守护独立的需求，愈发强烈。</p>
-<p>一场突如其来的入侵，至今已制造逾400万难民，亦让世界进一步撕裂；对全面清零的坚持，打碎了人们的日常生活，更击沉了早已摇摇欲坠的信念。在野心与冷漠之间，在“保卫祖国”与“稳定大局”的宏大叙事之下，是面目模糊、失去温度的普通人，被剥夺、被噤声。有时会想，我们是不是要学会迅速接受骤然失序，要敏捷地披上层层盔甲，或是要深谙“逃避”之道，才能继续在这个世界生存下去？</p>
+<p>一场突如其来的入侵，至今已制造逾400万难民，亦让世界进一步撕裂；中国对清零的坚持，打碎了人们的日常生活，更击沉了早已摇摇欲坠的信念。在野心与冷漠之间，在“去纳粹化”与“稳定大局”的官方叙事之下，是面目模糊、失去温度的普通人，被剥夺、被噤声。有时会想，我们是不是要学会迅速接受骤然失序，要敏捷地披上层层盔甲，或是要深谙“逃避”之道，才能继续在这个世界生存下去？</p>
 <p>哲学家莫顿（Timothy Morton）说，全人类正在经历“丧失座标的创伤”（a traumatic loss of coordinates）——因为技术的进步在与人类对这个世界的基本认知对抗。而过去几年里，丧失座标的创伤早已扩大到日常生活，在疫情、战争、离散和对峙的当下，变得清晰可见、隐隐作痛。</p>
 <p>这些创伤，也在日夜刺痛新闻前线的我们。在失序之时、在创伤如海啸般淹没常识的时刻，我们想要再提“守护”。</p>
 <p>透过直抵现实的描述、不停歇的追问和反复核查，透过清晰、谨慎的书写，透过一点点扩宽认知的边界，我们想要守护看清这个世界的可能，自决自主的可能，对话共情的可能；也清醒看到，已无人能够独善其身的现实。</p>
@@ -23,7 +23,7 @@ author: 端传媒编辑部 发自新加坡
 <p><strong>因此，更要守护，层层叠叠人群中，宝石般的人心。</strong></p>
 <p>纪录片导演、独立记者王少君在北京疫情爆发、被隔离在小区的22天里，写下了52岁卡车司机谢琳的<a href="https://theinitium.com/article/20220517-mainland-shanghai-female-truck-driver/">故事</a>。中国有3000万卡车司机——其中只有30到150万是女性。王少君记录了谢琳独自驾车四天四夜、穿行4000公里，将30顿物资从新疆送到封城中的上海的故事。王少君说：“生活驱使着她们在一条没有终点的跑道上奔跑，作为观众我只有敬佩和悲伤。”而身为记录者的她，也要“成为一个善良的人。”</p>
 <p><strong>我们可以一起守护的，还有“你的看见”。</strong></p>
-<p>生活在上海的端传媒读者，在参加关于上海封城的<a href="https://theinitium.com/article/20220412-membership-event/">小端夜聊</a>时，分享了自己被转运到一个方舱途中的所见所闻。那天，有人在华山路上贴了“此内容因为违法无法查看”、“人们正在死去”等标语，却很快被警方带走。这位读者说，他想告诉贴标语的人：“虽然留存的时间很短，但是同时在这个城市里⋯⋯也有同样的人们看到了那个现场，他们也在用另一种方式参与进去。”</p>
+<p>生活在上海的端传媒读者，在参加关于上海封城的<a href="https://theinitium.com/article/20220425-event-review/">小端夜聊</a>时，分享了自己被转运到一个方舱途中的所见所闻。那天，有人在华山路上贴了“此内容因为违法无法查看”、“人们正在死去”等标语，却很快被警方带走。这位读者说，他想告诉贴标语的人：“虽然留存的时间很短，但是同时在这个城市里⋯⋯也有同样的人们看到了那个现场，他们也在用另一种方式参与进去。”</p>
 <p>在今天，成为记录者是一件需要大量勇气和坚韧心志的事；而留给独立记者的空间和资源，越来越稀薄；作为这条路上的同行者——我们不仅为独立记者提供资源和平台支持，更希望与众人协力搭建一个健康的生态，让从业者可以持续成长、相互汲养。</p>
 <p>在“如何守护独立报导？端Plus会员计划一周年系列活动”中，我们将在7月2日下午开设三场面向独立记者的工作坊：“深度报导写作：如何用人物与场景讲好故事？”、“Pitch Perfect：如何为你的选题找到支持？”、“给记者的安全隐私不完全指南”。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220615-notes-initium-plus-one-year/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/a75d39470ab24bd7abbcbf20a9f2c383.jpg?imageView2/1/w/1080/h/1620/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
@@ -31,7 +31,7 @@ author: 端传媒编辑部 发自新加坡
 
 <p>除了工作坊，还有一场线上活动——“端小聚：独立记录为何重要？读者、记者和媒体的角色与困境”，邀请读者、独立记录者与媒体观察者共同讨论独立记录的意义是什么？不同角色的人们，可以在这个新闻自由备受威胁的年代，为守护独立记录做些什么？</p>
 <p>我们也将举办面向Plus会员的分享会——“尼曼归来，与《铿锵集》前记者蔡玉玲聊聊独立报导的未来”，在尼曼的一年，她有哪些收获和思考？香港的新闻报导，还有哪些可能性？未来的独立报导可以怎样做下去？</p>
-<p>此外，我们精心制作了收录10篇重磅报导的电子书<a href="https://i.init.shop/collections/custom-collection-5/products/br-span-style-color-2bb6c9-class-highlight-intro-span-13">《身旁与远方，我们共同的力量——端传媒Plus独立报导精选2021-2022》</a>，发送给每位端Plus会员，感谢你过去一年的支持与守护。</p>
+<p>此外，我们精心制作了收录10篇重磅报导的电子书<a href="https://i.init.shop/collections/initium_ebook/products/initiumplus_collection_2022">《身旁与远方，我们共同的力量——端传媒Plus独立报导精选2021-2022》</a>，发送给每位端Plus会员，感谢你过去一年的支持与守护。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220615-notes-initium-plus-one-year/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/ab886543c7e34228b0284b1ebbfccb0e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
 
