--- a/_posts/2022-06-14-INMEDIA-鄉事派反對高球場建屋-揚言四鄉將-群起攻之.html
+++ b/_posts/2022-06-14-INMEDIA-鄉事派反對高球場建屋-揚言四鄉將-群起攻之.html
@@ -10,10 +10,12 @@ author: 獨媒報導
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/06141830-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>政府擬於粉嶺高爾夫球場建屋，引起極大爭議。北區區議會今日就項目討論，會上大多區議員反對計劃。有議員稱政府當時決意發展是為了「招呼反對派」，更豪言指若計劃通過，「我哋北區4個鄉一定群起而攻之」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1H9k54" title="無標題"><img src="https://live.staticflickr.com/65535/52145778120_a969ab76c0_z.jpg" width="640" alt="無標題" /></a></p>
-<p><strong>9.54 公頃地興建約 1.2萬伙公屋單位 </strong></p>
+<p><strong>9.54公頃地興建約 1.2萬伙公屋單位 </strong></p>
 <p>政府2008年開始研究、2012年正式推出新界東北發展計劃，因涉及搬遷多條非原居民村及活躍耕地，引起民間極大爭議，不少團體要求全面收回佔地172公頃的粉嶺高球場。有民間團體批評高球場佔用珍貴土地資源，並獲政府提供象徵式租金優惠，卻以天價出售高球會會籍牟利。</p>
 <p>在爭議下，高球場最終仍然得保，2019年政府宣布接納其設立的土地供應專責小組建議，只收回高球場於粉錦公路以東32公頃用地作房屋用途。</p>
-<p>三年之後，當局終向北區區議會提交文件，公布發展詳情，32公頃當中僅9.54公頃土地興建公營房屋或社區發展等，佔收回土地的28.1%，預計興建約1.2萬伙單位，居住人口約為 3.36萬人，餘下的21.65公頃土地則劃分為保育區域，建屋範圍集中於收地的東北面，鄰近北區醫院及清河邨，預約明年9月收回土地後展開工程，爭取於2029年落成公營房屋。</p>
+<p>三年之後，當局終向北區區議會提交<a href="https://www.districtcouncils.gov.hk/north/doc/2020_2023/tc/dc_meetings_doc/21781/n_2022_013_ch.pdf">文件</a>，公布發展詳情，32公頃當中僅9.54公頃土地興建公營房屋或社區發展等，佔收回土地的28.1%，預計興建約1.2萬伙單位，居住人口約為 3.36萬人，餘下的21.65公頃土地則劃分為保育區域，建屋範圍集中於收地的東北面，鄰近北區醫院及清河邨，預約明年9月收回土地後展開工程，爭取於2029年落成公營房屋。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/368n42" title="螢幕截圖 2022-06-15 上午11.32.32"><img src="https://live.staticflickr.com/65535/52147895204_b4fe7fcc6c_z.jpg" width="640" alt="螢幕截圖 2022-06-15 上午11.32.32" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Vf5o9t" title="螢幕截圖 2022-06-15 上午11.32.40"><img src="https://live.staticflickr.com/65535/52147676108_9c57795b5c_c.jpg" width="758" alt="螢幕截圖 2022-06-15 上午11.32.40" /></a></p>
 <p>文件亦表示，該劃作「康樂及自然保育用途」的21.65公頃土地，生態價值屬中至高級，範圍內有具生態價值的植物及動物，例如如東亞豪豬、赤麂、豹貓以及天然沼澤。</p>
 <p><strong>建制區議員指發展高球場為「招呼反對派」</strong></p>
 <p>多名建制派區議員會上狠批政府。北區區議會副主席李冠洪大力反對高球場發展，稱政府當時決意發展是為了「招呼反對派」。他指高球場形狀偏長，不適合興建房屋；又指現時已有北部都會區，「大把地方」，認為政府毋須強硬發展粉嶺高球場。</p>
